# ChainSettle

./: .env.sample  .gitignore  ChainSettle_API_Documentation.md  README.md  cli.py  curl.txt  logs  mock_apis.py  requirements.txt
backend/: dockerfile  main.py  pyproject.toml  requirements.txt  setup.py  validator.py
backend/abi/: settlement_registry_abi.json
backend/arweave/: arlocal.py  arlocal_class.py  arlocal_node.js  arlocal_node.py  cli.txt  logs
backend/cache/: cache.db  cache.db-shm  cache.db-wal
backend/chainsettle/: __init__.py  docusign.py  metadata.py  paypal.py  plaid.py  scripts.py  utils.py  web3_utils.py
backend/escrows/: 123.json  1858.json
backend/keystores/: 0x0031B7E19fa81eC5835BB9980862359b2671Ba2F.json  0x00Fc010339a338e00F77ce4fe8915675dCd476E9.json  0x022c7687943294D1c63055D2DAE2A6AC3A3310A1.json  0x10e8DBDDaC332a5a67E434fE1C553dCc21dcd753.json  0x11424D0dB10791C1f3529EfE9867E3E83A913399.json  0x22a936B5A90d4408EBd992C9A484B699e4878d6a.json  0x333fB3B3b4e83Aa877807Be6d5cF6c4974732C47.json  0x33763A8816317518FC08f887a753BdB6cA160d70.json  0x3C8B4DEe75AEBb1ab4051ADC03Ce5040C1aE4B74.json  0x3F91C659C9de3cB3F4959F955888Caa519469DE3.json  0x5F08b7df96E061ED00a56761e10F6eB2F7b629dA.json  0x6e9a4b32119e2D1663ab8D94f86f98377195D2cA.json  0x748C2Fb722d4044c2D671964F3e1aB7852F700c8.json  0x82ab9F9a0C5673Cc3fA61F27115b64FaaE2D4407.json  0x82e17348Cc568908a9CA972e9D4193E7014999a8.json  0xA580124C0F5b0C10E4Ba47F2A6706f38ddf01Efd.json  0xC4EBC094a6359FC3e51e02442b4E4cA7c06FAd50.json  0xD22f12855047Ad1Bd24111319F0465782B6ea6c0.json  (+7 more)
notes/: curl.txt  (+3 more)
(+51 files in other folders)
